# autoware-wrapper

./: .gitignore  Dockerfile  README.md  config_example.yaml  pyproject.toml  set_route_test.py
.github/workflows/: docker-publish.yml
autoware_wrapper/: autoware.py  contract.py  geometry.py  publish_manager.py  runtime_config.py  server.py  version.py
misc/: config.py  pisa.launch.xml
tests/: test_autoware_timeouts.py  test_contract.py  test_observation_v2.py  test_runtime_config.py
