[project]
name = "autoware-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "numpy>=2.2.6",
    "pyyaml>=6.0.3",
    "pisa-api>=0.1.19",
]

[tool.uv.sources]
pisa-api = { git = "https://github.com/PISA-Hut/pisa-api.git" }
